Adding style modification to base elements

--- a/themes/darkmagnus/templates/base.tmpl
+++ b/themes/darkmagnus/templates/base.tmpl
@@ -10,6 +10,8 @@ ${template_hooks['extra_head']()}
 </head>
 <body>
 <a href="#content" class="sr-only sr-only-focusable">${messages("Skip to main content")}</a>
+<img class="logo" src="/images/maximusmagnus_logo_cropped.png" alt="maximus magnus logo">
+<p class="motto"> <q> An exultant call for all man to reach for greatness </q> </p>
 <!-- Menubar -->
 
 <nav class="navbar navbar-inverse navbar-static-top">
