Changing blog motto

--- a/themes/darkmagnus/templates/base.tmpl
+++ b/themes/darkmagnus/templates/base.tmpl
@@ -11,7 +11,7 @@ ${template_hooks['extra_head']()}
 <body>
 <a href="#content" class="sr-only sr-only-focusable">${messages("Skip to main content")}</a>
 <img class="logo" src="/images/maximusmagnus_logo_cropped.png" alt="maximus magnus logo">
-<p class="motto"> <q> An exultant call for all man to reach for greatness </q> </p>
+<p class="motto"> <em>A curious blend of seriousness and nonchalence </em></p>
 <!-- Menubar -->
 
 <nav class="navbar navbar-inverse navbar-static-top">
