--- a/themes/darkmagnus/assets/css/custom.css
+++ b/themes/darkmagnus/assets/css/custom.css
@@ -17,3 +17,17 @@ body {
     text-align:center;
     font-size:large;
 }
+
+a, a:hover  {
+    color:white;
+}
+
+article {
+    width:75%;
+    margin:auto;
+    font-size:large;
+    
+}
+
+
+
